kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mv-user
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mv-user
  template:
    metadata:
      labels:
        app: mv-user
    spec:
      containers:
      - name: mv-user
        image: registry.digitalocean.com/mv-user/mv_user_server:0.0.8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3333
