kubernetes/statefu_set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mv-user-csi-app-set
spec:
  selector:
    matchLabels:
      app: mypod
  serviceName: "mv-user"
  replicas: 1
  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
      - name: mv-user
        image: busybox
        args:
        - sleep
        - infinity
        volumeMounts:
        - mountPath: "/data"
          name: mv-user-pvc
  volumeClaimTemplates:
  - metadata:
      name: mv-user-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: do-block-storage
