kubernetes/pod.yml
apiVersion: v1
kind: Service
metadata:
  name: mv-user
spec:
  ports:
    - port: 80
      targetPort: 3333
  selector:
    app: mv-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mv-user
spec:
  selector:
    matchLabels:
      app: mv-user
  replicas: 3
  template:
    metadata:
      labels:
        app: mv-user
    spec:
      containers:
        - name: mv-user
          image: registry.digitalocean.com/mv-user/mv_user_server:0.0.10
          ports:
            - containerPort: 3333
