kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mv-user-service
spec:
  selector:
    app: mv-user
  ports:
  - protocol: 'TCP'
    port: 3333
    targetPort: 80
  type: LoadBalancer
