kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mv-user-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mv-user.api-mv.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mv-user
            port:
              number: 80
